--- a/lib/templates.html
+++ b/lib/templates.html
@@ -146,6 +146,8 @@
                             {{ take key='edit' default='Edit' }}
                         </div>
                         {{/if}}
+                        {{/if}}
+                        {{#if canRemove}}
                         <div class="btn btn-danger remove-action" aria-label="Left Align">
                             {{ take key='remove' default='Remove' }}
                         </div>
@@ -254,6 +256,7 @@
                     placeholder="{{ take key='placeholder-textarea' default='Join the discussion'}}"
                     class="form-control {{#if reply}}create-reply{{else}}create-comment{{/if}}" rows="3"></textarea>
             </div>
+            <!-- To do : add logic for not permitted to start a conversation i.e. before you are followed by the person! -->
             <button type="submit" class="btn btn-primary">{{ take key=addButtonKey default=addButtonText }}</button>
         </form>
     {{/if}}
