added markdown functionality

--- a/lib/templates.html
+++ b/lib/templates.html
@@ -131,7 +131,7 @@
                   {{/if}}
                   <small>{{createdAgo}}</small></h4>
                 <div class="content">
-                    <div class="comment">{{#mathjax}}<p class="comment-content" data-id="{{commentId}}">{{#autolink}}{{content}}{{/autolink}}</p>{{/mathjax}}
+                    <div class="comment">{{#mathjax}}<p class="comment-content" data-id="{{commentId}}">{{#markdown}}{{content}}{{/markdown}}</p>{{/mathjax}}
                     </div>
                       {{#if image}}
                           <div class="content-image">
